--- a/src/app/treetable/component/treetable.component.html
+++ b/src/app/treetable/component/treetable.component.html
@@ -2,8 +2,16 @@
 
   <div *ngFor="let column of displayedColumns; first as isFirst;">
     <ng-container matColumnDef="{{column}}">
-      <th mat-header-cell *matHeaderCellDef [ngClass]="{'vertical-separator': options.verticalSeparator}">
-        {{options.capitalisedHeader ? (column | titlecase) : column}}
+      <th
+        mat-header-cell *matHeaderCellDef
+        [ngClass]="{'vertical-separator': options.verticalSeparator, 'titlecase': options.capitalisedHeader}"
+      >
+        <ng-container
+          *ngIf="columnDefs && columnDefs[column]?.headerTemplate; else defaultHeaderDef"
+          [ngTemplateOutlet]="columnDefs[column].headerTemplate"
+          [ngTemplateOutletContext]="{columnDef: columnDefs[column], value: column}"
+        ></ng-container>
+        <ng-template #defaultHeaderDef>{{ column }}</ng-template>
       </th>
       <td mat-cell *matCellDef="let element" [ngClass]="{'vertical-separator': options.verticalSeparator}">
         <div *ngIf="isFirst">
@@ -16,8 +24,13 @@
           </div>
         </div>
         <div *ngIf="!isFirst">
-          {{element.value[column]}}
+          <ng-container
+            *ngIf="columnDefs && columnDefs[column]?.template; else defaultDef"
+            [ngTemplateOutlet]="columnDefs[column].template"
+            [ngTemplateOutletContext]="{columnDef: columnDefs[column], value: element.value[column]}"
+          ></ng-container>
         </div>
+        <ng-template #defaultDef>{{element.value[column]}}</ng-template>
       </td>
     </ng-container>
   </div>
