--- a/src/app/treetable/component/treetable.component.html
+++ b/src/app/treetable/component/treetable.component.html
@@ -1,23 +1,43 @@
-<table mat-table [dataSource]="dataSource" [ngClass]="formatElevation()">
-
+<table
+  mat-table
+  cdkDropList
+  [dataSource]="dataSource"
+  [cdkDropListData]="dataSource.data"
+  [cdkDropListDisabled]="!options.dragAndDropEnabled"
+  (cdkDropListDropped)="dropRow($event)">
+  [ngClass]="formatElevation()"
+>
   <div *ngFor="let column of displayedColumns; first as isFirst;">
     <ng-container matColumnDef="{{column}}">
       <th
-        mat-header-cell *matHeaderCellDef
-        [ngClass]="{'vertical-separator': options.verticalSeparator, 'titlecase': options.capitalisedHeader}"
+        mat-header-cell
+        *matHeaderCellDef
+        [ngClass]="{
+          'vertical-separator': options.verticalSeparator,
+          'titlecase': options.capitalisedHeader
+        }"
       >
         <ng-container
           *ngIf="columnDefs && columnDefs[column]?.headerTemplate; else defaultHeaderDef"
           [ngTemplateOutlet]="columnDefs[column].headerTemplate"
           [ngTemplateOutletContext]="{columnDef: columnDefs[column], value: column}"
         ></ng-container>
-        <ng-template #defaultHeaderDef>{{ column }}</ng-template>
+        <ng-template #defaultHeaderDef>
+          {{ columnDefs && columnDefs[column]?.label ? columnDefs[column]?.label : column }}
+        </ng-template>
       </th>
-      <td mat-cell *matCellDef="let element" [ngClass]="{'vertical-separator': options.verticalSeparator}">
-        <div *ngIf="isFirst">
+      <td
+        mat-cell
+        *matCellDef="let element"
+        [ngClass]="{'vertical-separator': options.verticalSeparator}"
+      >
+        <div *ngIf="isFirst" cdkDragHandle>
           <div class="value-cell">
             <div [innerHTML]="formatIndentation(element)"></div>
-            <mat-icon [ngStyle]="{'visibility': element.children.length ? 'visible' : 'hidden'}" (click)="onNodeClick(element)">
+            <mat-icon
+              [ngStyle]="{'visibility': element.children.length ? 'visible' : 'hidden'}"
+              (click)="onNodeClick(element)"
+            >
               {{element.isExpanded ? 'keyboard_arrow_down' : 'keyboard_arrow_right'}}
             </mat-icon>
             <div>{{element.value[column]}}</div>
@@ -30,12 +50,25 @@
             [ngTemplateOutletContext]="{columnDef: columnDefs[column], value: element.value[column]}"
           ></ng-container>
         </div>
-        <ng-template #defaultDef>{{element.value[column]}}</ng-template>
+        <ng-template #defaultDef>
+          {{element.value[column]}}
+        </ng-template>
       </td>
     </ng-container>
   </div>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row [ngClass]="{'highlight-on-hover': options.highlightRowOnHover}" *matRowDef="let row; columns: displayedColumns;"></tr>
+  <tr
+    mat-header-row
+    *matHeaderRowDef="displayedColumns"
+  ></tr>
+  <tr
+    mat-row
+    *matRowDef="let row; columns: displayedColumns;"
+    cdkDrag cdkDragLockAxis="y"
+    [ngClass]="{
+      'highlight-on-hover': options.highlightRowOnHover,
+      'drag-enabled': options.dragAndDropEnabled
+    }"
+  ></tr>
 
 </table>
