--- a/src/app/treetable/component/treetable.component.scss
+++ b/src/app/treetable/component/treetable.component.scss
@@ -15,6 +15,10 @@ mat-icon {
   background-color: #f0f0f5;
 }
 
+.drag-enabled {
+  cursor: pointer;
+}
+
 th.titlecase {
   text-transform: capitalize;
 }
@@ -23,6 +27,10 @@ td[class*=' mat-column']{
   width: 10vw;
   min-width: 10vw;;
   max-width: 10vw;
+}
+
+.mat-row {
+  background-color: #ffffff;
 }
 
 .mat-cell, .mat-header-cell {
