--- a/src/app/treetable/component/treetable.component.html
+++ b/src/app/treetable/component/treetable.component.html
@@ -1,11 +1,8 @@
 <table
   mat-table
-  cdkDropList
   [dataSource]="dataSource"
-  [cdkDropListData]="dataSource.data"
-  [cdkDropListDisabled]="!options.dragAndDropEnabled"
-  (cdkDropListDropped)="dropRow($event)">
   [ngClass]="formatElevation()"
+  cdkDropListGroup
 >
   <div *ngFor="let column of displayedColumns; first as isFirst;">
     <ng-container matColumnDef="{{column}}">
@@ -31,7 +28,7 @@
         *matCellDef="let element"
         [ngClass]="{'vertical-separator': options.verticalSeparator}"
       >
-        <div *ngIf="isFirst" cdkDragHandle>
+        <div *ngIf="isFirst">
           <div class="value-cell">
             <div [innerHTML]="formatIndentation(element)"></div>
             <mat-icon
@@ -57,18 +54,23 @@
     </ng-container>
   </div>
 
-  <tr
-    mat-header-row
-    *matHeaderRowDef="displayedColumns"
-  ></tr>
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+
   <tr
     mat-row
     *matRowDef="let row; columns: displayedColumns;"
-    cdkDrag cdkDragLockAxis="y"
     [ngClass]="{
       'highlight-on-hover': options.highlightRowOnHover,
       'drag-enabled': options.dragAndDropEnabled
     }"
+    cdkDropList
+    cdkDrag
+    [id]="row.id"
+    [cdkDropListData]="row"
+    [cdkDropListDisabled]="!options.dragAndDropEnabled"
+    (cdkDragStarted)="dragStarted(row, $event)"
+    (cdkDragReleased)="dragReleased()"
+    (cdkDropListDropped)="dropListDropped($event)"
   ></tr>
 
 </table>
