--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -47,5 +47,5 @@
 <treetable
   [tree]="templateTree"
   [options]="dragAndDropTreeOptions"
-  (itemMoved)="itemMoved()"
+  (itemMoved)="itemMoved($event)"
 ></treetable>
