--- a/src/app/treetable/component/treetable.component.html
+++ b/src/app/treetable/component/treetable.component.html
@@ -26,11 +26,13 @@
       <td
         mat-cell
         *matCellDef="let element"
-        [ngClass]="{'vertical-separator': options.verticalSeparator}"
+        [ngClass]="{
+          'horizontal-separator': false && options.horizontalSeparator,
+          'vertical-separator': options.verticalSeparator
+        }"
       >
         <div *ngIf="isFirst">
-          <div class="value-cell">
-            <div [innerHTML]="formatIndentation(element)"></div>
+          <div class="value-cell" [ngStyle]="formatIndentation(element)">
             <mat-icon
               [ngStyle]="{'visibility': element.children.length ? 'visible' : 'hidden'}"
               (click)="onNodeClick(element)"
