--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,20 +24,28 @@
 <treetable [tree]="singleRootTree"></treetable>
 
 <h2>Tree as Array of Nodes</h2>
-<treetable [tree]="arrayOfNodesTree"></treetable> -->
+<treetable [tree]="arrayOfNodesTree"></treetable>
 
-<!-- <br>
 <br>
+<br> -->
 
 <h2>Tree with custom template</h2>
 <treetable
   [tree]="templateTree"
   [columnDefs]="templateTreeColumnDefs"
   [options]="templateTreeOptions"
-></treetable> -->
+></treetable>
+
+<ng-template #nameTemplate let-value="value">
+  {{ value }} (mod.)
+</ng-template>
 
 <ng-template #completedTemplate let-value="value">
   {{ value ? '✓' : '×'}}
+</ng-template>
+
+<ng-template #dataTemplate let-value="value">
+  {{ value }}
 </ng-template>
 
 <br>
