--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,5 @@
 h1 {
-  font-family: Arial, Helvetica, sans-serif 
+  font-family: Arial, Helvetica, sans-serif
 }
 
 .title {
@@ -7,4 +7,11 @@ h1 {
   align-items: center;
   justify-content: space-between;
   padding: 0px 10px 10px 10px;
+}
+
+.add-btn {
+  padding: .5rem 1rem;
+  background-color: #fafafa;
+  font-weight: bold;
+  cursor: pointer;
 }
